# eqemu-marketplace-rof2

./: .gitattributes  .gitignore  README.md
client/: CMakeLists.txt  EXTRACTION_MANIFEST.md  _boundaries.json  _build.json  _closure.json  _verify.json  assemble.py
client/src/: marketplace_asi.cpp  offsets.h
content-packs/: README.md  config.json  illusion_globalload.json  install.py  nobuffs_client_patch.py
content-packs/familiars/: README.md  build_pack.py  pack.json
content-packs/illusions/: README.md  build_pack.py  pack.json
content-packs/mounts/: README.md  build_pack.py  pack.json
content-packs/ornaments/: README.md  build_pack.py  orn_filter.py  pack.json
content-packs/pet-illusions/: README.md  build_pack.py  pack.json
docs/: adapting-to-your-client.md  offset-inventory.json
server/: boz_mkt_currency.h  client_methods.cpp  integration.md
server/gm_commands/: mkt.cpp  mktbuy.cpp  mktview.cpp
sql/: sample_catalog.sql  schema.sql
tool/catalog-builder/: README.md  catalog_builder.py  index.html  run.bat  run.sh
